--- a/client/app/app.scss
+++ b/client/app/app.scss
@@ -10,6 +10,8 @@
 	font-weight: bold;
 }
 
+
+
 .addressBox {
 	margin-left: 10px;
 	margin-right: 10px;
@@ -18,6 +20,25 @@
 	padding-right: 5px;
 	border: 1px solid #3F51B5;
 }
+
+.stagingPanel {
+	border: 1px solid red;
+}
+
+.stagingPanel.ng-enter, .stagingPanel.ng-leave {
+  transition:all cubic-bezier(0.250, 0.460, 0.450, 0.940) 1.5s;
+}
+
+.stagingPanel.ng-enter,
+.stagingPanel.ng-leave.ng-leave-active {
+  opacity:0;
+}
+
+.stagingPanel.ng-leave,
+.stagingPanel.ng-enter.ng-enter-active {
+  opacity:1;
+}
+
 
 .asd-header {
 	height: 50px; 
