Add info component and some updates to address and home components

--- a/client/app/app.scss
+++ b/client/app/app.scss
@@ -10,7 +10,14 @@
 	font-weight: bold;
 }
 
-
+.infoBox {
+	margin-left: 10px;
+	margin-right: 10px;
+	margin-bottom: 20px;
+	padding-left: 5px;
+	padding-right: 5px;
+	border: 1px solid #3F51B5;
+}
 
 .addressBox {
 	margin-left: 10px;
