--- a/client/app/components/address-list/address-list.component.html
+++ b/client/app/components/address-list/address-list.component.html
@@ -5,5 +5,5 @@
 </div><br><br>
 <br>
 <div class="row" ng-repeat="address in $ctrl.addressList">
-	<address address="address" address-index="$index"></address>
+	<address address="address" address-index="$index" address-previous="$ctrl.addressListPrevious[$index]"></address>
 </div>
