--- a/client/app/components/info/info.component.html
+++ b/client/app/components/info/info.component.html
@@ -1,7 +1,7 @@
 <h4>Info</h4>
 <div class="row">
 <div class="col-md-6">
-	<div class="stagingPanel infoBox" ng-if="$ctrl.info.staging.PROV_ID">
+	<div class="stagingPanel infoBox" ng-if="$ctrl.showStaging">
 		<div class="btn-group btn-group-sm" role="group">
           <button type="button" class="btn btn-default" ng-click="$ctrl.accept()">Accept</button>
           <button type="button" class="btn btn-default" ng-click="$ctrl.reject()">Reject</button>
@@ -13,10 +13,10 @@
 <div class="col-md-6">
 	<div class="infoBox">
 		<div class="btn-group btn-group-sm" role="group">
-          <button type="button" class="btn btn-default" ng-if="$ctrl.info.ACTION_TAKEN_ON_STAGING == 1 || $ctrl.info.ACTION_TAKEN_ON_MASTER == 1" ng-click="$ctrl.rollback()">Rollback</button>
+          <button type="button" class="btn btn-default" ng-if="$ctrl.showRollback" ng-click="$ctrl.rollback()">Rollback</button>
           <button type="button" class="btn btn-default" ng-click="$ctrl.onHold()">Put On Hold</button>
         </div><br><br>
-		<input ng-model="$ctrl.info.master.PROV_FIRST_NAME" ng-change="$ctrl.valueChanged()" ng-disabled="!$ctrl.info.ACTION_TAKEN_ON_STAGING || $ctrl.info.ACTION_TAKEN_ON_STAGING == 0"></input><br>
+		<input ng-model="$ctrl.info.master.PROV_FIRST_NAME" ng-change="$ctrl.valueChanged()" ng-disabled="$ctrl.masterFieldsDisabled"></input><br>
 		{{$ctrl.info.master.PROV_LAST_NAME}}<br>
 
 	</div>
